# CBT

1d_laplace/: main.py
fdm/: CMakeLists.txt  main.cpp
fdm/src/: solver.cpp
gmsh/: generate.py  script.geo  t.csv
